# sharderator

./: README.md  pyproject.toml  technical-design.md
sharderator-test-suite/: README.md  pyproject.toml
sharderator-test-suite/src/sharderator_test/: __init__.py  cli.py  connection.py  fixtures.py  ingest.py  status.py  validate.py
src/sharderator/: __init__.py  __main__.py  cli.py
src/sharderator/client/: __init__.py  connection.py  queries.py  tracker.py
src/sharderator/engine/: analyzer.py  cleaner.py  events.py  frozen_analyzer.py  merge_analyzer.py  merge_orchestrator.py  merger.py  mounter.py  orchestrator.py  preflight.py  restorer.py  shrinker.py  sizing.py  snapshotter.py  states.py  swapper.py  task_waiter.py  verifier.py
src/sharderator/gui/: analyze_widget.py  confirm_dialog.py  connection_dialog.py  defrag_widget.py  index_table.py  job_history_dialog.py  job_log.py  main_window.py  merge_tree.py  progress.py  qt_events.py  settings_dialog.py  tracker_table.py
src/sharderator/models/: frozen_topology.py  index_info.py  job.py
src/sharderator/util/: __init__.py  config.py  logging.py
tests/: test_defrag_widget.py  test_index_info.py  test_job.py  test_merge_analyzer.py  test_preflight.py  test_sizing.py  test_snapshotter.py  test_task_waiter.py
