[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sharderator-test-suite"
version = "0.1.0"
description = "End-to-end test harness for Sharderator"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "elasticsearch>=8.12",
    "click>=8.1",
    "rich>=13.0",
]

[project.scripts]
sharderator-test = "sharderator_test.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sharderator_test"]
